# note-linux

tools/CMake/ExampleLinux/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
tools/CMake/ExampleLinux/atlib/: ryat.c  ryat.h  ryat_if.c  ryat_if.h  ryat_utils.c  ryat_utils.h
tools/CMake/ExampleLinux/atlib/bc26/: _bc26_at.c  _bc26_at.h  bc26_if.c  bc26_if.h
tools/CMake/ExampleLinux/atlib/ec20/: CMakeLists.txt  _ec20_at.c  _ec20_at.h  ec20_if.c  ec20_if.h
tools/CMake/ExampleLinux/atlib/g500/: _g500_at.c  _g500_at.h  g500_if.c  g500_if.h
tools/CMake/ExampleLinux/atlib/l620/: _l620_at.c  _l620_at.h  l620_if.c  l620_if.h
tools/CMake/ExampleLinux/atlib/l710/: CMakeLists.txt  _l710_at.c  _l710_at.h  l710_if.c  l710_if.h
tools/CMake/ExampleLinux/atlib/nbxx_01/: AT.md  _nbxx_01_at.c  _nbxx_01_at.h  nbxx_01_if.c  nbxx_01_if.h
tools/CMake/ExampleLinux/atlib/sim800/: AT.md  _sim800_at.c  _sim800_at.h  sim800_if.c  sim800_if.h
tools/CMake/ExampleLinux/atlib/slm750/: CMakeLists.txt  _slm750_at.c  _slm750_at.h  slm750_if.c  slm750_if.h
tools/CMake/ExampleLinux/atlib/slm790/: CMakeLists.txt  _slm790_at.c  _slm790_at.h  slm790_if.c  slm790_if.h
tools/CMake/ExampleLinux/atlib/u9x07/: CMakeLists.txt  _u9x07_at.c  _u9x07_at.h  u9x07_if.c  u9x07_if.h
tools/CMake/ExampleLinux/includes/: includes.h
tools/CMake/ExampleMultiple/: CMakeLists.txt  build.sh  support_board.cfg
tools/CMake/ExampleMultiple/arch/gd32e23x/ds884/: cpu.c  gd32e23x_it.c
tools/CMake/ExampleMultiple/arch/stm32f10x/: CMakeLists.txt
tools/CMake/ExampleMultiple/arch/stm32f10x/cy001/: CMakeLists.txt  cpu.c  stm32f1xx_it.c
tools/CMake/ExampleMultiple/bsp/cy001/: CMakeLists.txt  bsp_com.c  bsp_embed_flash.c  bsp_w25qxx.c  bsp_wdt.c
tools/CMake/ExampleMultiple/bsp/cy001/include/: bsp_com.h  bsp_embed_flash.h  bsp_w25qxx.h  bsp_wdt.h
tools/CMake/ExampleMultiple/bsp/ds884/: bsp_com.c  bsp_flash1.c  bsp_flash2.c  bsp_wdt.c
tools/CMake/ExampleMultiple/bsp/ds884/include/: bsp_com.h  bsp_flash1.h  bsp_flash2.h  bsp_wdt.h
tools/CMake/ExampleMultiple/bsp/linux/: CMakeLists.txt  bsp_com.c  bsp_flash1.c  bsp_flash2.c  bsp_wdt.c
tools/CMake/ExampleMultiple/bsp/linux/include/: bsp_com.h  (+2 more)
tools/CMake/ExampleMultiple/bsp/win32/: CMakeLists.txt  bsp_com.c  bsp_flash1.c  bsp_flash2.c  bsp_wdt.c
tools/CMake/ExampleMultiple/common/: CMakeLists.txt  simplefifo.c
tools/CMake/ExampleMultiple/common/include/: simplefifo.h
tools/CMake/ExampleMultiple/components/: CMakeLists.txt
tools/CMake/ExampleMultiple/components/ymodem/: .gitignore
tools/CMake/ExampleMultiple/config/: list.h  misc.h
tools/CMake/ExampleMultiple/config/cy001/: driver.cmake  options.h  stlib.cmake  version.h  ymodem_config.h
tools/CMake/ExampleMultiple/config/ds884/: options.h  version.h  ymodem_config.h
tools/CMake/ExampleMultiple/config/linux/: driver.cmake  options.h  version.h  ymodem_config.h
tools/CMake/ExampleMultiple/config/win32/: driver.cmake  options.h  version.h  ymodem_config.h
tools/CMake/ExampleMultiple/driver/: CMakeLists.txt  buzzer.c  d100.c  driver.c  flash.c  fm25qxx.c  gpio.c  infrared.c  led.c  motorcomm_yt8512x.c  ms523.c  seps525.c  serial.c  silkid.c  timer.c  zazxxx.c
tools/CMake/ExampleMultiple/driver/include/: at24cxx.h  buzzer.h  d100.h  device.h  flash.h  fm13dt160.h  fm25qxx.h  gpio.h  infrared.h  led.h  motorcomm_yt8512x.h  ms523.h  rtc.h  seps525.h  serial.h  timer.h  zazxxx.h
tools/CMake/ExampleMultiple/lib/linux/: CMakeLists.txt  rs232.c
tools/CMake/ExampleMultiple/lib/win32/: CMakeLists.txt
tools/CMake/ExampleMultiple/src/: CMakeLists.txt  download.c  firmware.c  irq_process.c  platform.c  strategy.c
tools/CMake/ExampleMultiple/src/cy001/: CMakeLists.txt  fputc.c  main.c
tools/CMake/ExampleMultiple/src/ds884/: fputc.c  main.c
tools/CMake/ExampleMultiple/src/include/: download.h  firmware.h  platform.h  strategy.h
tools/CMake/ExampleMultiple/src/linux/: CMakeLists.txt  fputc.c  main.c
tools/CMake/ExampleMultiple/src/win32/: CMakeLists.txt  fputc.c  main.c
tools/CMake/ExampleMultiple/tools/: cy001.cmake  cy001_toolchain.cmake  linux.cmake  win32.cmake
tools/CMake/ExampleMultiple/utils/: CMakeLists.txt  md5.c  utils.c
tools/CMake/ExampleMultiple/utils/include/: checksum.h  md5.h  utils.h
tools/CMake/Example_Embedded/: .gitignore  CMakeLists.txt  toolchain_cortexm3.cmake
tools/CMake/Example_Embedded/arch/efm32lgxx/: CMakeLists.txt
tools/CMake/Example_Embedded/config/: linker.ld
tools/CMake/Example_Embedded/config/include/: attributes.h  errorno.h
tools/CMake/Example_Embedded/driver/: CMakeLists.txt  Makefile  w5500_init.c
tools/CMake/Example_Embedded/driver/include/: device.h
tools/CMake/Example_Embedded/freertos/: CMakeLists.txt
tools/CMake/Example_Embedded/net/w5500/: CMakeLists.txt
tools/CMake/Example_Embedded/src/: CMakeLists.txt
tools/CMake/Example_Embedded/src/task/: Makefile
tools/CMake/Example_Linux/atlib/: CMakeLists.txt  ryat.c  ryat.h  ryat_if.c  ryat_if.h  ryat_utils.c  ryat_utils.h
tools/CMake/Example_Linux/atlib/bc26/: CMakeLists.txt  _bc26_at.c  _bc26_at.h  bc26_if.c  bc26_if.h
tools/CMake/Example_Linux/atlib/ec20/: _ec20_at.c  _ec20_at.h  ec20_if.c  ec20_if.h
tools/CMake/Example_Linux/atlib/g500/: CMakeLists.txt  _g500_at.c  _g500_at.h  g500_if.c  g500_if.h
tools/CMake/Example_Linux/atlib/l620/: CMakeLists.txt  _l620_at.c  _l620_at.h  l620_if.c  l620_if.h
tools/CMake/Example_Linux/atlib/l710/: _l710_at.c  _l710_at.h  l710_if.c  l710_if.h
tools/CMake/Example_Linux/atlib/nbxx_01/: AT.md  CMakeLists.txt  _nbxx_01_at.c  _nbxx_01_at.h  nbxx_01_if.c  nbxx_01_if.h
tools/CMake/Example_Linux/atlib/sim800/: AT.md  CMakeLists.txt  _sim800_at.c  _sim800_at.h  sim800_if.c  sim800_if.h
tools/CMake/Example_Linux/atlib/slm750/: _slm750_at.c  _slm750_at.h  slm750_if.c  slm750_if.h
tools/CMake/Example_Linux/atlib/slm790/: _slm790_at.c  _slm790_at.h  slm790_if.c  slm790_if.h
tools/CMake/Example_Linux/atlib/u9x07/: _u9x07_at.c  _u9x07_at.h  u9x07_if.c  u9x07_if.h
tools/CMake/Example_Linux/lib/rs232/: CMakeLists.txt  rs232.c  rs232.h
(+247 files in other folders)
